@@ -19,6 +19,56 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|NoSuchElementException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -380,56 +430,6 @@ operator|.
 name|wal
 operator|.
 name|HLog
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|NoSuchElementException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Random
 import|;
 end_import
 
@@ -2028,16 +2028,20 @@ name|KeyValue
 argument_list|>
 argument_list|()
 decl_stmt|;
-while|while
-condition|(
+name|boolean
+name|hasMore
+decl_stmt|;
+do|do
+block|{
+name|hasMore
+operator|=
 name|rootScanner
 operator|.
 name|next
 argument_list|(
 name|results
 argument_list|)
-condition|)
-block|{
+expr_stmt|;
 for|for
 control|(
 name|KeyValue
@@ -2076,6 +2080,11 @@ expr_stmt|;
 block|}
 block|}
 block|}
+do|while
+condition|(
+name|hasMore
+condition|)
+do|;
 block|}
 finally|finally
 block|{
